JEDIT 4.1 VERSION HISTORY

* Version 4.1pre9 -- 4.0 release candidate 1

+ Bug Fixes:

- Saving a file from one file system to another using the "Save a Copy
  As" command could cause problems if the destination VFS implemented
  the _saveComplete() method. This method was only passed a buffer
  instance, and there was no way to obtain the destination path.

+ API Changes:

- VFS._saveComplete(Object session, Buffer buffer, Component comp) is
  now VFS._saveComplete(Object session, Buffer buffer, String path,
  Component comp).

* Version 4.1pre8

Thanks to Carmine Lucarelli, Chris Petersen, Jonathan Revusky,
Kris Kopicki, Silas Smith and Will Varfar for contributing to this
release.

+ Syntax Highlighting Changes:

- Icon syntax highlighting (Silas Smith).

- Redcode syntax highlighting (Will Varfar).

- Minor updates to JavaScript, PHP and ShellScript modes
  (Chris Petersen).

- Updated FreeMarker syntax highlighting (Jonathan Revusky).

- Java mode now highlights "assert" and "strictfp" keywords.

+ Auto Indent Changes:

- "indentPrevLine" buffer-local property now named "indentNextLine".
  Update your modes.

- Added a new "indentNextLines" property that indents all subsequent
  lines, not just the next line. This finally gives correct auto-indent
  behavior in Python files.

- Added a new "lineUpClosingBracket" property. If false, then a closing
  bracket will not unindent the current line, but rather the next line.
  This gives us semi-correct indent behavior in Lisp and Scheme modes.

+ Miscellaneous Changes:

- Plugin manager progress window now only has one progress bar.

- In the file system browser, S+ENTER with a directory selected opens
  the directory in a new browser window.

- Pressing LEFT in the filename field with the caret already at the
  left-most position goes to the parent directory location.

- Added View->Show Buffer Switcher command (shortcut: A+BACK_QUOTE). It
  shows the buffer switcher combo box if it is enabled.
