@@ -2,12 +2,21 @@ JEDIT 4.1 VERSION HISTORY
 
 * Version 4.1pre9 -- 4.0 release candidate 1
 
++ Performance Enhancements:
+
+- Much faster auto indent.
+
 + Bug Fixes:
 
 - Saving a file from one file system to another using the "Save a Copy
   As" command could cause problems if the destination VFS implemented
   the _saveComplete() method. This method was only passed a buffer
   instance, and there was no way to obtain the destination path.
+
+- Making changes above the first line did not scroll the text area.
+
+- Fixed a bug with nested compound edits. I'm not sure if it ever caused
+  any problems, however it did affect performance.
 
 + API Changes:
 
